--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,9 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&display=swap&subset=latin-ext");
+@import url("https://fonts.googleapis.com/css?family=VT323&display=swap&subset=latin-ext");
+
+html {
+  font-family: "Roboto Condensed", sans-serif;
+}
 
 body {
   margin: 0;
@@ -19,9 +24,53 @@ body {
   margin: 0 0 0 10%;
 }
 
-header > p {
+.header__paragraph {
   margin: 0 0 0 2rem;
   color: whitesmoke;
-  font-family: "Roboto Condensed", sans-serif;
   font-size: 3rem;
+}
+.memes {
+  text-align: center;
+  padding-top: 2rem;
+}
+.memes__top-text,
+.memes__bottom-text {
+  color: whitesmoke;
+  font-weight: bold;
+  font-size: 2rem;
+  letter-spacing: 0.2rem;
+  text-transform: uppercase;
+}
+
+.memes__top-text {
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.memes__bottom-text {
+  position: absolute;
+  top: 70%;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.meme-form {
+  width: 80%;
+  margin: 1rem auto;
+  display: flex;
+  justify-content: space-between;
+}
+.meme-form__input {
+  width: 40%;
+  font-size: 1.5rem;
+  height: 2rem;
+  text-align: center;
+}
+.meme-form__button {
+  border: none;
+  font-size: 1.5rem;
+  letter-spacing: 0.2rem;
+  color: whitesmoke;
+  background: #6441a5;
+  font-family: "VT323", monospace;
 }
