--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&display=swap&subset=latin-ext");
 @import url("https://fonts.googleapis.com/css?family=VT323&display=swap&subset=latin-ext");
+@import url("https://fonts.googleapis.com/css?family=Oswald:400,700&display=swap&subset=latin-ext");
 
 html {
   font-family: "Roboto Condensed", sans-serif;
@@ -72,5 +73,4 @@ body {
   letter-spacing: 0.2rem;
   color: whitesmoke;
   background: #6441a5;
-  font-family: "VT323", monospace;
 }
