--- a/src/style.css
+++ b/src/style.css
@@ -15,6 +15,7 @@ body {
 .header {
     height: 7rem;
     display: flex;
+    flex-direction: row;
     align-items: center;
     background: linear-gradient(to right, #2a0045, #6441a5);
 }
