--- a/src/style.scss
+++ b/src/style.scss
@@ -38,7 +38,7 @@ body {
 
 .memes {
     text-align: center;
-    padding-top: 2rem;
+    padding: 2rem;
 
     &__top-text,
     &__bottom-text {
@@ -71,15 +71,15 @@ body {
 
 .meme-form {
     width: 80%;
-    margin: 1rem auto;
+    margin: 1.5rem 1rem 0 1rem;
     display: flex;
     justify-content: space-between;
 
     &__input {
-        width: 40%;
         font-size: 1.5rem;
         height: 2rem;
         text-align: center;
+        width: 40%;
 
         &:focus {
             outline: none;
@@ -95,6 +95,18 @@ body {
         color: whitesmoke;
         background: #6441a5;
     }
+}
+
+.footer {
+    background: black;
+    clip-path: inset(0 5% 0 5%);
+    color: #56E39F;
+    font-size: 1.2rem;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin: 0;
+    padding: 1.5rem;
+    text-align: center;
+    text-transform: uppercase;
 }
 
 @keyframes shakes {
