--- a/src/style.scss
+++ b/src/style.scss
@@ -3,118 +3,117 @@
 @import url("https://fonts.googleapis.com/css?family=Oswald:400,700&display=swap&subset=latin-ext");
 
 html {
-    font-family: "Roboto Condensed", sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
 }
 
 body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .header {
-    align-items: center;
-    height: 7rem;
-    display: flex;
-    flex-direction: row;
-    background: linear-gradient(to right, #2a0045, #6441a5);
+  align-items: center;
+  height: 7rem;
+  display: flex;
+  flex-direction: row;
+  background: linear-gradient(to right, #2a0045, #6441a5);
 
-    &__img {
-        height: 80%;
-        margin: 0 0 0 10%;
-        transition: .3s linear;
+  &__img {
+    height: 80%;
+    margin: 0 0 0 10%;
+    transition: 0.3s linear;
 
-        &:hover {
-            animation: shakes .2s ease-in-out infinite alternate;
-        }
+    &:hover {
+      animation: shakes 0.2s ease-in-out infinite alternate;
     }
+  }
 
-    &__paragraph {
-        margin: 0 0 0 2rem;
-        color: whitesmoke;
-        font-size: 3rem;
-    }
+  &__paragraph {
+    margin: 0 0 0 2rem;
+    color: whitesmoke;
+    font-size: 3rem;
+  }
 }
 
 .memes {
-    text-align: center;
-    padding: 2rem;
+  text-align: center;
+  padding: 2rem;
 
-    &__top-text,
-    &__bottom-text {
-        color: black;
-        font-weight: bold;
-        font-size: 2rem;
-        letter-spacing: 0.2rem;
-        text-transform: uppercase;
-    }
+  &__top-text,
+  &__bottom-text {
+    color: black;
+    font-weight: bold;
+    font-size: 2rem;
+    letter-spacing: 0.2rem;
+    text-transform: uppercase;
+  }
 
-    &__img {
-        width: 31rem;
-        height: 21rem;
-    }
+  &__img {
+    width: 31rem;
+    height: 21rem;
+  }
 }
 
 .memes__top-text {
-    position: absolute;
-    top: 30%;
-    left: 50%;
-    transform: translateX(-50%);
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .memes__bottom-text {
-    position: absolute;
-    top: 72%;
-    left: 50%;
-    transform: translateX(-50%);
+  position: absolute;
+  top: 72%;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .meme-form {
-    width: 80%;
-    margin: 1.5rem 1rem 0 1rem;
-    display: flex;
-    justify-content: space-between;
+  width: 80%;
+  margin: 1.5rem 1rem 0 1rem;
+  display: flex;
+  justify-content: space-between;
 
-    &__input {
-        font-size: 1.5rem;
-        height: 2rem;
-        text-align: center;
-        width: 40%;
+  &__input {
+    font-size: 1.5rem;
+    height: 2rem;
+    text-align: center;
+    width: 40%;
 
-        &:focus {
-            outline: none;
-            background: #d8f3df;
-            border: 2px solid green;
-        }
+    &:focus {
+      outline: none;
+      background: #d8f3df;
+      border: 2px solid green;
     }
+  }
 
-    &__button {
-        border: none;
-        font-size: 1.5rem;
-        letter-spacing: 0.2rem;
-        color: whitesmoke;
-        background: #6441a5;
-    }
+  &__button {
+    border: none;
+    font-size: 1.5rem;
+    letter-spacing: 0.2rem;
+    color: whitesmoke;
+    background: #6441a5;
+  }
 }
 
 .footer {
-    background: black;
-    clip-path: inset(0 2% 0 2%);
-    color: #56E39F;
-    font-size: 1.2rem;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    margin: 0;
-    padding: 1.5rem;
-    text-align: center;
-    text-transform: uppercase;
+  background: black;
+  color: #56e39f;
+  font-size: 1.4rem;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  margin: 0;
+  padding: 1.4rem;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 @keyframes shakes {
-    0% {
-        transform: rotate(10deg);
-    }
+  0% {
+    transform: rotate(10deg);
+  }
 
-    100% {
-        transform: rotate(-10deg);
-    }
+  100% {
+    transform: rotate(-10deg);
+  }
 }
