--- a/src/style.scss
+++ b/src/style.scss
@@ -42,7 +42,7 @@ body {
 
   &__top-text,
   &__bottom-text {
-    color: black;
+    color: green;
     font-weight: bold;
     font-size: 2rem;
     letter-spacing: 0.2rem;
