--- a/src/style.scss
+++ b/src/style.scss
@@ -4,25 +4,35 @@
 
 html {
   font-family: "Roboto Condensed", sans-serif;
+  font-size: 16px;
 }
 
 body {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
 .header {
   align-items: center;
-  height: 7rem;
+  background: linear-gradient(to right, #2a0045, #6441a5);
   display: flex;
   flex-direction: row;
-  background: linear-gradient(to right, #2a0045, #6441a5);
+  height: 7rem;
+  margin-bottom: 2rem;
+
+  @media (max-width: 641px) {
+    height: 6rem;
+  }
 
   &__img {
     height: 80%;
-    margin: 0 0 0 10%;
+    margin: 0 0 0 5rem;
     transition: 0.3s linear;
+
+    @media (max-width: 641px) {
+      margin: 0 0 0 2rem;
+    }
 
     &:hover {
       animation: shakes 0.2s ease-in-out infinite alternate;
@@ -30,15 +40,20 @@ body {
   }
 
   &__paragraph {
-    margin: 0 0 0 2rem;
     color: whitesmoke;
     font-size: 3rem;
+    margin: 0 0 0 4rem;
+
+    @media (max-width: 641px) {
+      font-size: 1.5rem;
+      margin: 0 0 0 1rem;
+    }
   }
 }
 
 .memes {
+  padding: 1.3rem;
   text-align: center;
-  padding: 2rem;
 
   &__top-text,
   &__bottom-text {
@@ -50,30 +65,41 @@ body {
   }
 
   &__img {
-    width: 31rem;
-    height: 21rem;
+    height: 22rem;
+    width: 32rem;
+
+    @media (max-width: 641px) {
+      text-align: center;
+      width: 100%;
+    }
+  }
+  &__top-text {
+    left: 50%;
+    position: absolute;
+    top: 30%;
+    transform: translateX(-50%);
+
+    @media (max-width: 641px) {
+      top: 40%;
+    }
+  }
+  &__bottom-text {
+    left: 50%;
+    position: absolute;
+    top: 72%;
+    transform: translateX(-50%);
+
+    @media (max-width: 641px) {
+      top: 80%;
+    }
   }
 }
 
-.memes__top-text {
-  position: absolute;
-  top: 30%;
-  left: 50%;
-  transform: translateX(-50%);
-}
-
-.memes__bottom-text {
-  position: absolute;
-  top: 72%;
-  left: 50%;
-  transform: translateX(-50%);
-}
-
 .meme-form {
-  width: 80%;
-  margin: 1.5rem 1rem 0 1rem;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
+  margin: 0;
+  width: 100%;
 
   &__input {
     font-size: 1.5rem;
@@ -81,19 +107,40 @@ body {
     text-align: center;
     width: 40%;
 
+    @media (max-width: 641px) {
+      font-size: 1rem;
+      height: 1rem;
+      margin: 0.5rem;
+      padding: 0.5rem;
+      width: 80%;
+    }
+
     &:focus {
-      outline: none;
       background: #d8f3df;
       border: 2px solid green;
+      outline: none;
     }
   }
 
   &__button {
+    background: linear-gradient(to right, #2a0045, #6441a5);
     border: none;
+    color: whitesmoke;
     font-size: 1.5rem;
     letter-spacing: 0.2rem;
-    color: whitesmoke;
-    background: #6441a5;
+
+    @media (max-width: 641px) {
+      font-size: 1rem;
+      margin: 0.2rem;
+      padding: 0.5rem;
+      width: 86%;
+    }
+  }
+
+  @media (max-width: 641px) {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
   }
 }
 
@@ -106,6 +153,11 @@ body {
   padding: 1.4rem;
   text-align: center;
   text-transform: uppercase;
+
+  @media (max-width: 641px) {
+    font-size: 0.8rem;
+    padding: 1rem;
+  }
 }
 
 @keyframes shakes {
