--- a/src/style.scss
+++ b/src/style.scss
@@ -73,6 +73,7 @@ body {
       width: 100%;
     }
   }
+
   &__top-text {
     left: 50%;
     position: absolute;
@@ -83,6 +84,7 @@ body {
       top: 40%;
     }
   }
+
   &__bottom-text {
     left: 50%;
     position: absolute;
@@ -124,17 +126,27 @@ body {
 
   &__button {
     background: linear-gradient(to right, #2a0045, #6441a5);
+    background-size: 200%;
     border: none;
+    border-radius: 2px;
     color: whitesmoke;
+    cursor: pointer;
     font-size: 1.5rem;
     letter-spacing: 0.2rem;
+    position: relative;
+    transition: .3s;
 
     @media (max-width: 641px) {
+      background-size: 100%;
       font-size: 1rem;
       margin: 0.2rem;
       padding: 0.5rem;
       width: 86%;
     }
+  }
+
+  &__button:hover {
+    background-position-x: 100%;
   }
 
   @media (max-width: 641px) {
